# lin-cli

./: .clang-format  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: graphql-docs-full.md  graphql-enums.md  graphql-inputs.md  graphql-objects-detail.md  graphql-schema-full.md
src/: main.cpp
src/core/: auth.cpp  auth.h  cache.cpp  cache.h  color.cpp  color.h  config.cpp  config.h  error.cpp  error.h  filter.cpp  filter.h  graphql.cpp  graphql.h  http_client.cpp  http_client.h  output.cpp  output.h  paginator.cpp  paginator.h  types.h  version.h.in
src/modules/cache/: commands.cpp  commands.h
src/modules/comments/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/config/: commands.cpp  commands.h
src/modules/cycles/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/documents/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/favorites/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/initiatives/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/integrations/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/issues/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/labels/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/notifications/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/organization/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/projects/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/search/: api.cpp  api.h  commands.cpp  commands.h
src/modules/teams/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/users/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/views/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/modules/webhooks/: api.cpp  api.h  commands.cpp  commands.h  model.h
src/tui/: app.cpp  app.h  issue_detail.cpp  issue_detail.h  kanban.cpp  kanban.h  picker.cpp  picker.h  search.cpp  search.h  theme.h
tests/: CMakeLists.txt  test_cache.cpp  test_color.cpp  test_comments_parsing.cpp  test_config_parser.cpp  test_cycles_parsing.cpp  test_documents_parsing.cpp  test_error_parsing.cpp  test_favorites_parsing.cpp  test_filter_builder.cpp  test_graphql.cpp  test_initiatives_parsing.cpp  test_integrations_parsing.cpp  test_issue_parsing.cpp  test_labels_parsing.cpp  test_notifications_parsing.cpp  test_organization_parsing.cpp  test_output.cpp  test_pagination.cpp  test_project_create_input.cpp  test_projects_parsing.cpp  test_search.cpp  test_table_renderer.cpp  test_teams_name_resolution.cpp  test_teams_parsing.cpp  test_tui.cpp  test_users_parsing.cpp  test_views_parsing.cpp  test_webhooks_parsing.cpp
